Fixed nav alignment

--- a/css/main.scss
+++ b/css/main.scss
@@ -123,13 +123,8 @@ body {
 						align-items: center;
 						width: 100%;
 
-						& svg {
-							width: 3rem;
-							height: 3rem;
-						}
 						& .nav-name {
 							opacity: 1;
-							font-size: 3rem;
 							font-weight: 600;
 						}
 					}
